[package]
name = "iso7816_tx"
version = "0.1.1"
edition = "2021"
authors = ["Alex <zartarn15@gmail.com>"]
categories = ["embedded", "no-std"]
description = "ISO7816 Smart Card T=1 Transmission protocol"
keywords = ["no_std", "iso7816", "smartcard", "apdu", "t1"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zartarn15/iso7816_tx"

[dev-dependencies]
hex-literal = "0.4"
